--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.2.2",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "requestify": "^0.2.5",
     "xml2js": "^0.4.19"
   },
