--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "fast-levenshtein": "^2.0.6",
     "mongodb": "^3.2.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
