--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "fast-levenshtein": "^2.0.6",
