--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "civisanalysisupdateapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "version": "2.0.0",
+  "description": "CLI tool for incrementally fetching data from Camara.gov.br API",
+  "main": "config.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "fetch": "node scripts/fetch-all-data.js",
+    "start": "node scripts/fetch-all-data.js",
+    "classify": "node scripts/classify-themes.js"
   },
+  "keywords": [
+    "camara",
+    "deputados",
+    "votacoes",
+    "proposicoes"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "dotenv": "^16.4.5",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "fast-levenshtein": "^2.0.6",
-    "mongodb": "^3.2.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "requestify": "^0.2.5",
-    "xml2js": "^0.4.19"
+    "fast-xml-parser": "^4.3.2",
+    "openai": "^6.22.0",
+    "p-limit": "^5.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.10"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
